@@ -1,9 +1,16 @@
 # ChangeLog for sys-apps/portage
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.31 2004/04/26 17:24:41 carpaski Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.32 2004/05/21 17:50:14 kugelfang Exp $
 
 # See the gentoo-src Portage ChangeLog for up-to-date release information:
 # http://www.gentoo.org/cgi-bin/viewcvs.cgi/portage/ChangeLog?rev=HEAD&cvsroot=gentoo-src&content-type=text/vnd.viewcvs-markup
+
+*portage-2.0.50-r6 (21 May 2004)
+
+  21 May 2004; Danny van Dyk <kugelfang@gentoo.org> portage-2.0.50-r6.ebuild:
+  Added check_multilib() to check for valid multilib environment; this keeps the
+  build of portage from dying in case "multilib" is in USE, but gcc hasn't been
+  compiled with it. Applys to amd64 platform only.
 
 *portage-2.0.50-r3 (23 Mar 2004)
 
